// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HueTable.vue should render a sticky table with header and column css 1`] = `
<div
  class="hue-table-container"
>
  <table
    class="hue-table sticky-header"
  >
    <caption>
      <!-- Because of Web:TableWithoutCaptionCheck -->
      
    </caption>
    <thead>
      <tr
        class="header-row"
      >
        
        <th
          class="header-css-class-A sticky-first-col"
          scope="col"
        >
          A
        </th>
        <th
          class="header-css-class-B"
          scope="col"
        >
          B
        </th>
        
        <!-- To fill the blank space to the right when table width is smaller than available horizontal space -->
        <th
          class="column-flush"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td
          class="td-css-class-A sticky-first-col"
        >
          
          1
          
        </td>
        <td
          class="td-css-class-B"
        >
          
          5
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class="td-css-class-A sticky-first-col"
        >
          
          2
          
        </td>
        <td
          class="td-css-class-B"
        >
          
          6
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class="td-css-class-A sticky-first-col"
        >
          
          3
          
        </td>
        <td
          class="td-css-class-B"
        >
          
          7
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class="td-css-class-A sticky-first-col"
        >
          
          4
          
        </td>
        <td
          class="td-css-class-B"
        >
          
          8
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      
    </tbody>
  </table>
</div>
`;

exports[`HueTable.vue should render a table 1`] = `
<div
  class="hue-table-container"
>
  <table
    class="hue-table"
  >
    <caption>
      <!-- Because of Web:TableWithoutCaptionCheck -->
      
    </caption>
    <thead>
      <tr
        class="header-row"
      >
        
        <th
          class=""
          scope="col"
        >
          A
        </th>
        <th
          class=""
          scope="col"
        >
          D
        </th>
        <th
          class=""
          scope="col"
        >
          C
        </th>
        <th
          class=""
          scope="col"
        >
          B
        </th>
        
        <!-- To fill the blank space to the right when table width is smaller than available horizontal space -->
        <th
          class="column-flush"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td
          class=""
        >
          
          1
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          false
          
        </td>
        <td
          class=""
        >
          
          5
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          2
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          true
          
        </td>
        <td
          class=""
        >
          
          6
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          3
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          false
          
        </td>
        <td
          class=""
        >
          
          7
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          4
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          true
          
        </td>
        <td
          class=""
        >
          
          8
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      
    </tbody>
  </table>
</div>
`;

exports[`HueTable.vue should render a table with a custom component for a cell 1`] = `
<div
  class="hue-table-container"
>
  <table
    class="hue-table"
  >
    <caption>
      <!-- Because of Web:TableWithoutCaptionCheck -->
      
    </caption>
    <thead>
      <tr
        class="header-row"
      >
        
        <th
          class=""
          scope="col"
        >
          A
        </th>
        <th
          class=""
          scope="col"
        >
          B
        </th>
        
        <!-- To fill the blank space to the right when table width is smaller than available horizontal space -->
        <th
          class="column-flush"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td
          class=""
        >
          
          1
          
        </td>
        <td
          class=""
        >
          
          2
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          4
          
        </td>
        <td
          class=""
        >
          
          5
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      
    </tbody>
  </table>
</div>
`;

exports[`HueTable.vue should render a table with adapter 1`] = `
<div
  class="hue-table-container"
>
  <table
    class="hue-table"
  >
    <caption>
      <!-- Because of Web:TableWithoutCaptionCheck -->
      
    </caption>
    <thead>
      <tr
        class="header-row"
      >
        
        <th
          class=""
          scope="col"
        >
          A
        </th>
        <th
          class=""
          scope="col"
        >
          B + C
        </th>
        
        <!-- To fill the blank space to the right when table width is smaller than available horizontal space -->
        <th
          class="column-flush"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td
          class=""
        >
          
          1
          
        </td>
        <td
          class=""
        >
          
          14
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          2
          
        </td>
        <td
          class=""
        >
          
          16
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          3
          
        </td>
        <td
          class=""
        >
          
          18
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          4
          
        </td>
        <td
          class=""
        >
          
          20
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      
    </tbody>
  </table>
</div>
`;

exports[`HueTable.vue should render a table with array rows 1`] = `
<div
  class="hue-table-container"
>
  <table
    class="hue-table"
  >
    <caption>
      <!-- Because of Web:TableWithoutCaptionCheck -->
      
    </caption>
    <thead>
      <tr
        class="header-row"
      >
        
        <th
          class=""
          scope="col"
        >
          A
        </th>
        <th
          class=""
          scope="col"
        >
          D
        </th>
        <th
          class=""
          scope="col"
        >
          C
        </th>
        <th
          class=""
          scope="col"
        >
          B
        </th>
        
        <!-- To fill the blank space to the right when table width is smaller than available horizontal space -->
        <th
          class="column-flush"
          scope="col"
        />
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td
          class=""
        >
          
          5
          
        </td>
        <td
          class=""
        >
          
          false
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          6
          
        </td>
        <td
          class=""
        >
          
          true
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          7
          
        </td>
        <td
          class=""
        >
          
          false
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      <tr>
        
        <td
          class=""
        >
          
          8
          
        </td>
        <td
          class=""
        >
          
          true
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        <td
          class=""
        >
          
          
          
        </td>
        
        <td
          class="column-flush"
        />
      </tr>
      
    </tbody>
  </table>
</div>
`;
